--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Upload Release
         uses: softprops/action-gh-release@v2
         with:
+          name: Wipr ${{github.ref_name}}
           files: Wipr.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
