--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: Build and Release
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
   workflow_dispatch:
 
@@ -11,43 +11,96 @@ jobs:
   build_windows:
     permissions:
       contents: write
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install MinGW-w64
+        run: choco install mingw -y
+
+      - name: Set PATH for MinGW
+        run: echo "C:\ProgramData\chocolatey\lib\mingw\tools\install\mingw64\bin" >> $env:GITHUB_PATH
+      
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.24"
+
+      - name: Install fyne CLI
+        run: go install fyne.io/tools/cmd/fyne@latest
+
+      - name: Generate bundle file
+        run: go generate
+
+      - name: Build
+        run: fyne package -tags windows
+      
+      - name: Zip it
+        run: Compress-Archive -Path Wipr.exe -DestinationPath Wipr_win-amd64.zip
+
+      - name: Upload Release
+        uses: softprops/action-gh-release@v2
+        with:
+          name: Wipr_win-amd64
+          files: Wipr_win-amd64.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build_linux:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
 
     steps:
-      - name: Login to Docker
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-      
       - uses: actions/checkout@v4
 
-      - name: Update packages
-        run: sudo apt update -y
+      - name: Install deps
+        run: |
+          sudo apt update -y
+          sudo apt-get install libgl1-mesa-dev xorg-dev libxkbcommon-dev
 
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.24"
 
-      - name: Install fyne-cross
-        run: go install github.com/fyne-io/fyne-cross@latest
+      - name: Install fyne CLI
+        run: go install fyne.io/tools/cmd/fyne@latest
 
       - name: Generate bundle file
         run: go generate
 
-      - name: Build for Windows
-        run: fyne-cross windows -name Wipr_win-amd64 -tags windows
+      - name: Build
+        run: fyne package -tags linux
 
-      - name: Build for Linux
-        run: fyne-cross linux -name Wipr_linux-amd64 -tags linux
+      - name: Zip it
+        run: tar -czvf Wipr_linux-amd64.tar.gz wipr
 
       - name: Upload Release
         uses: softprops/action-gh-release@v2
         with:
-          name: Wipr ${{github.ref_name}}
-          files: |
-            fyne-cross\dist\windows-amd64\Wipr_win-amd64.zip
-            fyne-cross\dist\linux-amd64\Wipr_linux-amd64.tar.xz
+          name: Wipr_linux-amd64
+          files: Wipr_linux-amd64.tar.gz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  release:
+    needs: [build_windows, build_linux]
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
+
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          name: Wipr ${{ github.ref_name }}
+          files: artifacts/**/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
